test/domains/bradc/slices/sliceDomain.good
D is: [1..10, 1..10]
DSlice is: [1..9 by 2, 2..10 by 2]
DSlice is: [1..9, 2..10]
sliceDomain.chpl:15: error: halt reached - range slice out of bounds: 0..9
